--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/index.js"></script>
+    <!-- <link rel="stylesheet" href="/css/index.css">
+    <script src="/js/index.js"></script> -->
 </head>
 <body>
     <h1>SAP Analytics Cloud Embedding Demo App Server</h1>
