--- a/views/qr-code.ejs
+++ b/views/qr-code.ejs
@@ -11,6 +11,7 @@
 <body>
     <div class="qr-code">
         <img src="#" alt="QR Code">
+        <a href="#">Link to App</a>
     </div>
 </body>
 
